--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>findActor</servlet-name>
         <servlet-class>findActor</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>plot</servlet-name>
+        <servlet-class>plot</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>findActor</servlet-name>
         <url-pattern>/findActor</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>plot</servlet-name>
+        <url-pattern>/plot</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
