--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>findCategory</servlet-name>
         <servlet-class>findCategory</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>report</servlet-name>
+        <servlet-class>report</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>findActor</servlet-name>
         <url-pattern>/findActor</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>findCategory</servlet-name>
         <url-pattern>/findCategory</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>report</servlet-name>
+        <url-pattern>/report</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
